--- a/pages/Home.module.css
+++ b/pages/Home.module.css
@@ -1,8 +1,9 @@
 .main {
     width: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 2rem;
+    gap: 3rem;
 }
