--- a/pages/Home.module.css
+++ b/pages/Home.module.css
@@ -1,9 +1,21 @@
 .main {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 3rem;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+}
+.picture {
+  border-radius: 50%;
+  width: 500px;
+  height: 163px;
+}
+
+@media (max-width: 550px) {
+  .picture {
+    width: 300px;
+    height: 83px;
+  }
 }
