--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -6,4 +6,7 @@
     align-items: center;
     gap: 1rem;
     margin-top: 9rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    flex-wrap: wrap;
 }
