--- a/components/Text/Text.module.css
+++ b/components/Text/Text.module.css
@@ -1,4 +1,10 @@
 .text {
-    font-size: 2rem;
-    text-align: center;
+  font-size: 2rem;
+  text-align: center;
+}
+
+@media (max-width: 500px) {
+  .text {
+    font-size: 1rem;
+  }
 }
